--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,8 @@
-<IfModule mod_rewrite.c>
-  Options -Multiviews
-  RewriteEngine On
-  RewriteBase /karudev/veille/Udemy/BenjiTraMVC/public/
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
+<IfModule mod_rewrite.c | rewrite_module>
+      Options -Multiviews
+      RewriteEngine On
+      RewriteBase /public
+      RewriteCond %{REQUEST_FILENAME} !-d
+      RewriteCond %{REQUEST_FILENAME} !-f
+      RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
