dumper extension twig standalone ok

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "twig/twig": "^2.0",
-        "tinymce/tinymce": ">= 4"
+        "tinymce/tinymce": ">= 4",
+        "symfony/var-dumper": "^4.3",
+        "hellonico/twig-dump-extension": "^1.0"
     }
 }
