--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "twig/twig": "^2.0",
         "tinymce/tinymce": ">= 4",
         "symfony/var-dumper": "^4.3",
-        "hellonico/twig-dump-extension": "^1.0"
+        "hellonico/twig-dump-extension": "^1.0",
+        "swiftmailer/swiftmailer": "^6.0"
     }
 }
